
syntax = "proto2";

package org.datacommons.proto;

// mvn currently sets the "-I<MVN_ROOT_FOLDER>/util/src/main/proto" flag for
// protoc (-I/--proto-path is the path to look at for proto imports)
// so, this will resolve correctly.
import "Debug.proto";

//
// A log of import processing with details on any warnings, errors, etc.
//
message ErrorCounters {
    repeated ErrorCounter error_counters = 1;

    message ErrorCounter {
        optional string counter_name = 1;
        optional bool is_prefix = 2;
        optional Log.Level level = 3; // imported from Debug.proto
        repeated string user_actions = 4;
    }
}